using process builder instead of runtime.exec